--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -451,5 +451,16 @@
     }
   }
 
+  &-th {
+    &:after {
+      content: '\e803';
+    }
+  }
+  &-th-list {
+    &:after {
+      content: '\e804';
+    }
+  }
+
 
 }
