--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1024,10 +1024,9 @@ button {
   }
 
   .chatForm & {
-    margin: 0 0.6em 0 0;
-
+    margin: 0 0.3em 0 0;
     @include media-breakpoint-up($desktop-breakpoint) {
-      margin-right: 1em;
+      margin-right: 0.5em;
     }
   }
 
@@ -1060,6 +1059,15 @@ button {
     &.disabled {
       opacity: .5;
       pointer-events: none;
+    }
+  }
+}
+
+.add-pdf {
+  .chatForm & {
+    margin: 0 0.6em 0 0;
+    @include media-breakpoint-up($desktop-breakpoint) {
+      margin-right: 1em;
     }
   }
 }
