--- a/src/styles/components/_fileUploader.scss
+++ b/src/styles/components/_fileUploader.scss
@@ -149,6 +149,13 @@
     vertical-align: top;
     @include ellipsis;
   }
+
+  .icn-file-pdf {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    opacity: 0.7;
+  }
 }
 
 .attachment-status {
