--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -145,3 +145,4 @@
 .icon-link:before { content: '\e800'; } /* '' */
 .icon-retweet:before { content: '\e801'; } /* '' */
 .icon-gplus:before { content: '\f0d5'; } /* '' */
+.icon-file-pdf:before { content: '\f1c1'; }
