--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -23,6 +23,17 @@
     margin-left: -10px;
     margin-right: -10px;
   }
+  .col-1-1 {
+    padding-left: 15px;
+    padding-right: 15px;
+    flex: 0 1 100%;
+    width: 100%;
+
+    @include media-breakpoint-up($desktop-breakpoint) {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
   .col-1-2 {
     padding-left: 15px;
     padding-right: 15px;
