Fix styles in explore clip categories selector for ios

--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -664,7 +664,7 @@
 }
 
 .stories-all {
-  margin-top: -8px;
+  // margin-top: -8px;
 
   @include media-breakpoint-up($desktop-breakpoint) {
     margin-top: -5px;
