--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -48,6 +48,7 @@
   display: flex;
 
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+    min-height: 4em;
     line-height: 4em;
   }
 
