--- a/src/styles/_chatAttachments.scss
+++ b/src/styles/_chatAttachments.scss
@@ -114,18 +114,18 @@
       .chatMessageHistoryItem {
         display: flex;
         flex-flow: row nowrap;
-        padding: 50px 0;
+        padding: 30px 0;
         border-bottom: 1px solid rgba(0,0,0, .2);
-        @include media-breakpoint-down($mobile-breakpoint) {
+        @include media-breakpoint-down($desktop-breakpoint-dcrs) {
           flex-flow: column nowrap;
         }
         .chatMessage {
           max-width: 380px;
-          @include media-breakpoint-down($mobile-breakpoint) {
+          @include media-breakpoint-down($desktop-breakpoint-dcrs) {
             max-width: 100%;
           }
           .media-chat  {
-            @include media-breakpoint-up($mobile-breakpoint) {
+            @include media-breakpoint-up($desktop-breakpoint-dcrs) {
               width: 380px;
               margin-left: auto;
             }
@@ -141,7 +141,7 @@
           flex-flow: column nowrap;
           align-items: center;
           justify-content: center;
-          @include media-breakpoint-down($mobile-breakpoint) {
+          @include media-breakpoint-down($desktop-breakpoint-dcrs) {
             width: 100%;
             order: 1;
             margin-top: 20px;
