--- a/src/styles/_chatAttachments.scss
+++ b/src/styles/_chatAttachments.scss
@@ -145,6 +145,7 @@
             width: 100%;
             order: 1;
             margin-top: 20px;
+            flex: 0 0 auto;
           }
           &-text {
             margin-bottom: 20px;
