--- a/src/styles/_chatAttachments.scss
+++ b/src/styles/_chatAttachments.scss
@@ -111,6 +111,9 @@
       height: 100%;
       overflow-y: auto;
       padding: 60px 10px 10px 10px;
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        display: block;
+      }
       .chatMessageHistoryItem {
         display: flex;
         flex-flow: row nowrap;
