Fix styles for scheduled messages list in group messages

--- a/src/styles/_subscribersMessages.scss
+++ b/src/styles/_subscribersMessages.scss
@@ -1,6 +1,7 @@
 @import "components/imports";
 
-.SubscribersGroupMessages {
+.SubscribersGroupMessages,
+.GroupsGroupMessages {
   .form-group.form-group_clear-gaps {
     display: flex;
     flex-flow: row nowrap;
