Styles fixes for cut top layout while change tabs with scrolling

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1554,7 +1554,8 @@
   body {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      height: 100%;
+      // height: 100%;
+      height: auto;
     }
   }
 
