--- a/src/styles/components/_general.scss
+++ b/src/styles/components/_general.scss
@@ -1,7 +1,9 @@
 html,
 body {
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-    height: 100%;
+    // height: 100%;
+    height: auto;
+
   }
 }
 
@@ -406,10 +408,11 @@ video {
 
 .main-container {
   min-height: 100%;
-
+  
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
     display: flex;
     flex-direction: column;
+    min-height: calc(100vh - 18.18px);  // 18.18px is a space for <div class="adsbox" />
   }
 
   @include media-breakpoint-up($desktop-breakpoint) {
