Replace twitter widgets to common twitter link for awards feature

--- a/src/styles/_awards.scss
+++ b/src/styles/_awards.scss
@@ -114,6 +114,10 @@
     display: flex;
   }
 
+  .btns {
+    align-items: center;
+  }
+
   @include media-breakpoint-down($desktop-breakpoint) {
     .form-field {
       display: block;
