--- a/src/styles/_chatAttachments.scss
+++ b/src/styles/_chatAttachments.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-content: flex-start;
 
   .media-item {
     display: block;
@@ -33,6 +34,7 @@
       left: 0;
       bottom: 0;
       right: 0;
+      margin-top: 0px;
       @include media-breakpoint-up($desktop-breakpoint-dcrs) {
         padding: 3px;
       }
