Fix extra padding on explore page layout

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -278,7 +278,7 @@
       align-content: start;
       grid-gap: 3px;
       overflow: hidden;
-      padding: 3px 0;
+      padding: 0;
     }
 
     .profile-page & {
