--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -152,38 +152,26 @@
   .contest-select-wrapper {
     margin: 10px 0 15px 0;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     align-items: center;
     justify-content: space-between;
     min-height: 30px;
-    @include media-breakpoint-down($desktop-breakpoint) {
-      flex-flow: row wrap;
-    }
 
-    .contest-group {
+    .content-types {
+      margin: 0px 0 20px 0;
       display: flex;
+      flex-flow: row nowrap;
       align-items: center;
-      @include media-breakpoint-down($desktop-breakpoint) {
-        margin-bottom: 15px;
-      }
-      &-name {
-        font-size: 18px; 
-        margin: 0 20px;
-        cursor: pointer;
-        color: $secondary-color;
-        opacity: 0.5;
-        @include media-breakpoint-down($desktop-breakpoint) {
-          font-size: 15px;
+      justify-content: space-evenly;
+      width: 100%;
+      @include media-breakpoint-up($desktop-breakpoint-dcrs) {
+        .btn-user-activity {
+          flex-basis: 67px;
         }
-        &.selected {
-          opacity: 1;
-        }
-
       }
-      &-divider {
-        opacity: 0.5;
-        &:last-child {
-          display: none;
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        .btn-user-activity {
+          background-color: inherit;
         }
       }
     }
