--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -60,10 +60,14 @@
     border-bottom: 1px solid rgba($gray, 0.2);
     align-items: flex-end;
     align-content: flex-end;
-    justify-content: flex-start;
+    justify-content: space-evenly;
   }
 
   .explore-page & {
+
+    @include media-breakpoint-up($desktop-breakpoint) {
+      justify-content: space-between;
+    }
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       justify-content: space-around;
@@ -129,6 +133,12 @@
         flex: 1;
         height: 44px;
         background-color: $white;
+      }
+    }
+
+    .explore-page & {
+      @include media-breakpoint-up($desktop-breakpoint) {
+        margin-right: 0;
       }
     }
 
