--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -577,36 +577,35 @@
 }
 
 .postTipsGoal {
-  padding: 10px 15px;
+  padding: 15px;
   position: relative;
-  .title {
-    display: flex;
-    justify-content: center;
-  }
-  &__progress {
-    padding-top: 15px;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    height: auto;
-
-    .progress-line {
-      background-color: rgba(0,0,0,.1);
-      // box-shadow: 0 0 0 1px  $secondary-color inset;
-      margin: 0 5px;
-      flex-grow: 1;
-      height: 8px;
-      border-radius: 4px;
-      position: relative;
-      &__bar {
-        height: 100%;
-        background-color: $secondary-color;
-        border-radius: 3px;
-      }
-      &__status {
-        position: absolute;
-        top: -20px;
-        transform: translateX(-50%)
+  &__content {
+    border: 1px solid rgba($gray, 0.2);
+    border-radius: 5px;
+    padding: 15px;
+    .title {
+      display: flex;
+      justify-content: center;
+    }
+    .postTipsGoal__progress {
+     
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      height: auto;
+  
+      .progress {
+        &-icon {
+          width: 24px;
+          height: 24px;
+          line-height: 24px;
+          font-size: 24px;
+          margin-right: 15px;
+        }
+        &-sum {
+          margin-right: auto;
+          font-weight: bold;
+        }
       }
     }
   }
