Allow to buy credits with available payouts balance

--- a/src/styles/components/_general.scss
+++ b/src/styles/components/_general.scss
@@ -1012,3 +1012,13 @@ video {
     z-index: 200 !important;
   }
 }
+.margin {
+  &-bottom {
+    &-1 {
+      margin-bottom: 1em;
+    }
+    &-2 {
+      margin-bottom: 2em;
+    }
+  }
+}
