--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -64,15 +64,19 @@
   }
 
   .explore-page & {
+    align-items: center;
 
     @include media-breakpoint-up($desktop-breakpoint) {
       justify-content: space-between;
     }
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      justify-content: space-around;
-      padding-left: 8px;
-      padding-right: 8px;
+      justify-content: space-evenly;
+      // padding-left: 8px;
+      // padding-right: 8px;
+      padding: 10px 8px;
+      flex-wrap: wrap;
+      min-height: auto;
     }
   }
 
@@ -137,6 +141,41 @@
     }
 
     .explore-page & {
+      color: $secondary-color;
+      border: none;
+      height: 32px;
+      display: inline-flex;
+      outline: 0;
+      padding: 0;
+      box-sizing: border-box;
+      transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+      align-items: center;
+      white-space: nowrap;
+      border-radius: 16px;
+      vertical-align: middle;
+      justify-content: center;
+      text-decoration: none;
+      background-color: rgba($gray, 0.1);
+
+      @include media-breakpoint-down($desktop-breakpoint) {
+        margin: 5px 10px;
+        height: 24px;
+        font-size: 14px;
+      }
+
+      &.active {
+        background-color: $secondary-color;
+        color: $white;
+      }
+
+      .content-nav__item-label {
+        overflow: hidden;
+        white-space: nowrap;
+        padding-left: 12px;
+        padding-right: 12px;
+        text-overflow: ellipsis;
+      }
+      
       @include media-breakpoint-up($desktop-breakpoint) {
         margin-right: 0;
       }
