--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -77,6 +77,7 @@
       padding: 10px 8px;
       flex-wrap: wrap;
       min-height: auto;
+      line-height: 6em;
     }
   }
 
@@ -174,6 +175,7 @@
         padding-left: 12px;
         padding-right: 12px;
         text-overflow: ellipsis;
+        line-height: 1em;
       }
       
       @include media-breakpoint-up($desktop-breakpoint) {
