Try to fix new stories label - 1

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -76,7 +76,7 @@
       // padding-right: 8px;
       padding: 10px 8px;
       flex-wrap: wrap;
-      min-height: auto;
+      min-height: 6em;
       line-height: 6em;
     }
   }
