--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -65,19 +65,21 @@
 
   .explore-page & {
     align-items: center;
+    border-bottom: 1px solid rgba($gray, 0.2);
 
     @include media-breakpoint-up($desktop-breakpoint) {
       justify-content: space-between;
+      margin-bottom: 16px;
+      padding: 0 5px 16px;
     }
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       justify-content: space-evenly;
-      // padding-left: 8px;
-      // padding-right: 8px;
       padding: 10px 8px;
       flex-wrap: wrap;
       min-height: 6em;
       line-height: 6em;
+      margin-bottom: 10px;
     }
   }
 
@@ -1102,9 +1104,11 @@
   align-items: center;
   justify-content: space-evenly;
   padding: 0 10px 20px 10px;
+  @include media-breakpoint-down($desktop-breakpoint) {
+    padding-top: 15px;
+  }
   & .item {
     cursor: pointer;
-    border-bottom: 2px solid transparent;
     &:hover {
       color: $main-color;
     }
@@ -1114,9 +1118,15 @@
     }
     a {
       color: $secondary-color;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.3s ease;
+      display: inline-block;
+      min-width: 60px;
+      text-align: center;
       &.router-link-exact-active {
         font-weight: 500;
         color: $main-color;
+        border-color: $secondary-color;
       }
     }
   }
